--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <div class="mx-auto py-5" id="results"></div>
     </main>
 
+    <footer class="footer fixed-bottom bg-light">
+        <div class="container py-4">
+        <span>Alicja Malinowska</span>
+        <a class="float-right" href=""><i class="fab fa-github fa-3x pr-2 pb-3"></i>Code</a>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
