--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <footer class="footer fixed-bottom bg-light">
         <div class="container py-4">
         <span>Alicja Malinowska</span>
-        <a class="float-right" href=""><i class="fab fa-github fa-3x pr-2 pb-3"></i>Code</a>
+        <a class="float-right" href="https://github.com/Alicja-Malinowska/Group-Generator" target="_blank"><i class="fab fa-github fa-3x pr-2 pb-3"></i>Code</a>
         </div>
     </footer>
 
