--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="btn btn-primary" id="addName" onclick="createInput()">Add</button>
         <button class="btn btn-danger" id="addName" onclick="removeInput()">Remove last</button>
         <div class="py-4">
-            <p>2. Select an option: you can either say how many people in a group you want or how many groups. Put the quantity in the inout field.</p>
+            <p>2. Select an option: you can either say how many people in a group you want or how many groups. Put the quantity in the input field.</p>
         <select name="options" id="options">
             <option value="people">People in group</option>
             <option value="groups">Number of groups</option>
